<resources>
    <string name="app_name">AnimeInfo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="one_piece">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4.9</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="familiarity">Similar</string>
    <string name="synopsis">Gol D. Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece-which promises an unlimited amount of riches and fame-and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey D. Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes-One Piece.</string>
</resources>